--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
             { id: 'h4', title: "品牌内容", cover: "https://images.unsplash.com/photo-1600607686527-6fb886090705?w=600&q=80", targetCategory: "brand" }
         ];
 
-        let allProjects = [
+        let allProjects = [    
+            {title: "AI作品","category": "offline","img": "images/p1.jpg","desc": "" },
             { title: "智能音箱详情", category: "product", img: "https://images.unsplash.com/photo-1589492477829-5e65395b66cc?w=800&q=80", desc: "2024 / Product Design" },
             { title: "上海展会易拉宝", category: "offline", img: "https://images.unsplash.com/photo-1563986768609-322da13575f3?w=800&q=80", desc: "2024 / Exhibition" },
             { title: "双11大促主图", category: "ecommerce", img: "https://images.unsplash.com/photo-1556742049-0cfed4f7a07d?w=800&q=80", desc: "Campaign Design" },
@@ -438,3 +439,4 @@ let allProjects = ${dataStr};
     </script>
 </body>
 </html>
+
